# gameOfLife-cpp

./: .gitignore  .x  CMakeLists.txt  README.md  functions.cpp  gameoflife.cpp  model.hpp  plaintext.cpp  r-pentomino.matrix  view-ncurses.cpp  view-sfml.cpp  view-text.cpp
include/: model.hpp  view.hpp
matrix/: various.matrix
patterns/: 101.matrix  aforall.matrix  aircraftcarrier.matrix  airforce.matrix  ants.matrix  average.matrix  b-heptomino-2.matrix  b-heptomino.matrix  bakery.matrix  barberpole.matrix  barge.matrix  beacon.matrix  beehive-1.matrix  beehive-2.matrix  beehive-3.matrix  bi-loaf.matrix  biblock.matrix  bigs.matrix  bipole.matrix  blinkership.matrix  blockanddock.matrix  blocker.matrix  blockontable.matrix  boatonboat.matrix  bookends.matrix  boss.matrix  brain.matrix  bunnies.matrix  burloaferimeter.matrix  caterer.matrix  centinal.matrix  chemist.matrix  cis-boat.matrix  cis-mirroredr-bee.matrix  clock.matrix  cloverleaf.matrix  confusedeaters.matrix  cp-pulsar.matrix  cross.matrix  dart.matrix  (+114 more)
patterns/old/: acorn.matrix
src/: controller.cpp  model.cpp  view-ncurses.cpp  view-sfml.cpp  view-text.cpp
standalone/: README.md  acorn.matrix  golife.cpp
